--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import "./normalize.css";
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
@@ -12,51 +14,152 @@ a {
 h1 {
     font-size: 80px;
     font-weight: 600;
+    letter-spacing: -2.5px;
     color: #192b59;
+    line-height: 1.1;
+    max-width: 600px;
+    margin-bottom: 65px;
+}
+
+.title-h2 {
+    font-size: 50px;
+    font-weight: 600;
+    color: #192b59;
+    line-height: 1.2;
+    letter-spacing: -1.5px;
+    max-width: 500px;
+}
+
+.title-h2 span {
+    display: block;
+    font-size: 16px;
+    font-weight: 800;
+    color: #1085e4;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin-bottom: 19px;
+}
+
+.title-40 {
+    font-size: 40px;
+    letter-spacing: -1.1px;
+    font-weight: 600;
+    color: #192b59;
+    line-height: 1.2;
+    margin: 80px;
+}
+
+.title-40 span {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 20px;
+    letter-spacing: 3.5px;
+    font-weight: 800;
+    color: #1085e4;
+    text-transform: uppercase;
+}
+
+.page-stat .title-h2, .page-screen .title-h2 {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.page-stat .title-h2 {
+    max-width: 500px;
+}
+
+.page-subscribe .title-h2 {
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 27px;
+}
+
+.page-subscribe .title-h2 span {
+    font-size: 14px;
+}
+
+.wrap {
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+.box-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 305px;
+}
+
+.logo {
+    display: block;
+    width: 181px;
+    height: 49px;
+    background-image: url(../img/Limpon.png);
 }
 
 .nav {
     font-size: 12px;
     font-weight: 700;
-    color: #6e7ea9;
-    text-transform: uppercase; 
+    text-transform: uppercase;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+}
+
+.nav > li {
+    padding: 0 20px;
+}
+
+.nav-item {
+    color: #6e7ea9;
+    letter-spacing: 2px;
+}
+
+.screen-img {
+    display: block;
+    background-image: url(../img/bg.png);
+    background-repeat: no-repeat;
+    width: 895px;
+    height: 740px;
+    position: absolute;
+    right: 0;
+    top: 189px;
 }
 
 .btn-primary {
     color: #fff;
     font-size: 12px;
     letter-spacing: 2.5px;
-    text-transform: uppercase; 
+    text-transform: uppercase;
     font-weight: 700;
     background-color: #1085e4;
     border: 1px solid #1085e4;
     padding: 20px 40px;
     border-radius: 30px;
+    transition: 0.3s;
 }
 
-.btn-primary:hover{
+.btn-primary:hover {
     background-color: #fff;
-    color:#1085e4;
+    color: #1085e4;
 }
 
 .btn-secondary {
     color: #7e8bae;
     font-size: 12px;
     letter-spacing: 2.5px;
-    text-transform: uppercase; 
+    text-transform: uppercase;
     font-weight: 700;
     background-color: #cbdbe8;
     border: 1px solid #cbdbe8;
     padding: 20px 40px;
     border-radius: 30px;
+    transition: 0.3s;
 }
 
-.btn-secondary:hover{
+.btn-secondary:hover {
     background-color: #fff;
-   
 }
 
 .btn-free {
@@ -66,7 +169,7 @@ h1 {
     letter-spacing: 1.7px;
 }
 
-.btn-info{
+.btn-info {
     color: #8085b1;
     background-color: transparent;
     border: 1px solid #dce1e5;
@@ -76,10 +179,97 @@ h1 {
     padding: 20px 40px;
     border-radius: 30px;
     text-transform: uppercase;
+    transition: 0.3s;
 }
 
-.btn-group a+a{
+.btn-group a + a {
     margin-left: 15px;
+}
+
+.list-company {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+.list-company-item {
+    display: block;
+}
+
+.company-one {
+    background-image: url(../img/sponsor-1.png);
+    flex-basis: 198px;
+    height: 58px;
+}
+
+.company-two {
+    background-image: url(../img/sponsor-2.png);
+    flex-basis: 200px;
+    height: 69px;
+}
+
+.company-three {
+    background-image: url(../img/sponsor-3.png);
+    flex-basis: 201px;
+    height: 47px;
+}
+
+.company-four {
+    background-image: url(../img/sponsor-4.png);
+    flex-basis: 200px;
+    height: 69px;
+}
+
+.grid {
+    display: grid;
+    grid-template-areas:
+        "a b c"
+        "d b c"
+        "d f g"
+        "e f g"
+        "e h h";
+    grid-gap: 35px;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+.grid-title {
+    grid-area: a;
+    margin: 0;
+}
+
+.grid-item-1 {
+    grid-area: b;
+}
+
+.grid-item-2 {
+    grid-area: c;
+}
+
+.grid-item-3 {
+    grid-area: d;
+}
+
+.grid-item-4 {
+    grid-area: e;
+}
+
+.grid-item-5 {
+    grid-area: f;
+}
+
+.grid-item-6 {
+    grid-area: g;
+}
+
+.grid-text {
+    grid-area: h;
 }
 
 .grid h2 {
@@ -93,13 +283,19 @@ h1 {
     color: #1085e4;
     text-transform: uppercase;
     display: block;
-    letter-spacing: 3px
+    letter-spacing: 3px;
+}
+
+.grid-item {
+    text-align: center;
+    box-shadow: 0 0 5px #f4f4f4;
 }
 
 .grid-item h3 {
     font-size: 20px;
     color: #192b59;
     font-weight: 600;
+    margin-bottom: 18px;
 }
 
 .grid-item a {
@@ -114,9 +310,78 @@ h1 {
     color: #192b59;
 }
 
+.grid-icon {
+    background-repeat: no-repeat;
+    display: block;
+    height: 92px;
+    margin: 0 auto 26px;
+    background-position: center;
+}
+
+.grid-icon-1 {
+    background-image: url(../img/icon1.png);
+    background-size: 73px 79px;
+}
+
+.grid-icon-2 {
+    background-image: url(../img/icon2.png);
+    background-size: 89px 85px;
+}
+
+.grid-icon-3 {
+    background-image: url(../img/icon3.png);
+    background-size: 79px 82px;
+}
+
+.grid-icon-4 {
+    background-image: url(../img/icon4.png);
+    background-size: 103px 92px;
+}
+
+.grid-icon-5 {
+    background-image: url(../img/icon5.png);
+    background-size: 85px 90px;
+}
+
+.grid-icon-6 {
+    background-image: url(../img/icon6.png);
+    background-size: 100px 87px;
+}
+
+.page-softwere-icon {
+    display: block;
+    background-image: url(../img/software-icon.png);
+    background-repeat: no-repeat;
+    width: 117px;
+    height: 98px;
+}
+
+.page-software .title-h2 {
+    max-width: 766px;
+    margin-top: 12px;
+    margin-bottom: 26px;
+}
+
+.page-software-list {
+    margin-top: 30px;
+    height: 340px;
+}
+
+.page-software-list dt {
+    font-size: 16px;
+    color: #5a6789;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.page-software-list dd {
+    margin-left: 0;
+    margin-bottom: 10px;
+}
+
 .page-subscribe h2 {
     font-size: 50px;
-    color: #ffffff;
+    color: #fff;
     font-weight: 600;
 }
 
@@ -125,7 +390,7 @@ h1 {
     font-weight: 800;
     color: #00bffe;
     display: block;
-    letter-spacing: 3px
+    letter-spacing: 3px;
 }
 
 .page-subscribe {
@@ -158,7 +423,7 @@ h1 {
     color: #1085e4;
     font-weight: 800;
     display: block;
-    letter-spacing: 3px
+    letter-spacing: 3px;
 }
 
 .page-stat li {
@@ -188,23 +453,23 @@ h1 {
     text-transform: uppercase;
 }
 
-.page-analytics h2{
+.page-analytics h2 {
     font-size: 50px;
     font-weight: 600;
     color: #192b59;
 }
 
-.page-analytics2 h2{
+.page-analytics2 h2 {
     font-size: 50px;
     font-weight: 600;
     color: #192b59;
 }
 
-.page-analytics a{
+.page-analytics a {
     font-size: 12px;
     font-weight: 700;
     color: #fff;
-    background-color: #1085e4
+    background-color: #1085e4;
 }
 
 .page-screen h2 {
@@ -221,4 +486,152 @@ h1 {
     text-transform: uppercase;
     display: block;
     letter-spacing: 3px;
+}
+
+.list-stat {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    margin-top: 76px;
+    padding: 0;
+}
+
+.list-stat > li {
+    font-size: 12px;
+    font-weight: 700;
+    color: #1085e4;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2.7px;
+}
+
+.list-stat > li > span {
+    display: block;
+    font-size: 60px;
+    color: #bacbdc;
+    margin-bottom: 23px;
+    letter-spacing: 0;
+}
+
+.screen {
+    margin-top: 36px;
+    margin-bottom: -7px;
+}
+
+.box-price {
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-price-item {
+    background-color: #f5faff;
+    width: 100%;
+}
+
+.box-price-item.active {
+    background-color: #192b59;
+    color: #fff;
+    margin: 0 30px;
+}
+
+.box-price-item ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.box-subscribe {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box-subscribe-text {
+    font-size: 18px;
+    max-width: 437px;
+    line-height: 28px;
+    margin-bottom: 37px;
+}
+
+.box-subscribe-user {
+    position: relative;
+}
+
+.box-subscribe-child {
+    flex-basis: 49%;
+}
+
+.box-subscribe-user input {
+    border: 2px solid #3f5cb1;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 45px;
+    background-color: transparent;
+    padding: 25px 230px 25px 37px;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.box-subscribe-user .btn-primary {
+    position: absolute;
+    top: 9px;
+    right: 8px;
+    padding: 17px 50px;
+}
+
+.box-subscribe-user input:focus, .box-subscribe-user .btn-primary {
+    outline: none;
+}
+/*
+.box-subscribe-user input
+*/
+
+
+
+/* page */
+
+.page-header {
+    background-image: url(../img/header-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 53px 0 330px 0;
+    position: relative;
+}
+
+.page-company {
+    background-image: url(../img/bg_company.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 106px 0 99px;
+}
+
+.page-stat,
+.page-screen {
+    background-color: #edf6ff;
+}
+
+.page-stat {
+    padding: 116px 0 96px 0;
+}
+
+.page-plan,
+.page-screen {
+    text-align: center;
+}
+
+.page-screen {
+    padding: 116px 0 0 0;
+}
+
+.page-subscribe {
+    padding: 25px 0 28px 0;
+    color: #fff;
+    background: rgba(9, 31, 143, 1);
+    background: -moz-linear-gradient(-45deg, rgba(9,31,143,1) 0%, rgba(12,116,220,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(9,31,143,1)), color-stop(100%, rgba(12,116,220,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(9,31,143,1) 0%, rgba(12,116,220,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(9,31,143,1) 0%, rgba(12,116,220,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(9,31,143,1) 0%, rgba(12,116,220,1) 100%);
+    background: linear-gradient(135deg, rgba(9,31,143,1) 0%, rgba(12,116,220,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#091f8f', endColorstr='#0c74dc', GradientType=1 );
 }
